--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "steg2020",
+  "name": "EarGather",
   "version": "1.0.0",
   "description": "My superb Nuxt.js project",
   "author": "SoraY677",
@@ -15,7 +15,8 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vuex-persistedstate": "^2.7.1"
   },
   "devDependencies": {}
 }
